[package]
name = "axum_session_redispool"
version = "0.1.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "📝 RedisPool Database layer for axum_session."
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/axum_session_redispool"
keywords = ["Axum", "Tower", "Redis", "Session"]
repository = "https://github.com/AscendingCreations/AxumSession"

[features]
redis-clusterdb = ["redis_pool/cluster", "redis/cluster-async"]

[dependencies]
async-trait.workspace = true
redis_pool = { git = "https://github.com/AkiraMiyakoda/RedisPool.git", rev = "401b3421c6c5d5566f04feb04c7e546f5e3631ba" }
redis = { version = "0.26.0", features = [
    "aio",
    "tokio-comp",
] }
axum_session.workspace = true
