[package]
name = "redis_test"
version = "0.0.1"
authors = ["Hossam Maher<hos.mercury@gmail.com>"]
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
async-trait.workspace = true
redis_pool = { git = "https://github.com/AkiraMiyakoda/RedisPool.git", rev = "401b3421c6c5d5566f04feb04c7e546f5e3631ba" }
redis = { version = "0.26.0" }
axum_session.workspace = true
axum_session_redispool = { path = "../../databases/redispool" }
